# live-project

./: README.md  pyproject.toml
client/: Dockerfile  cloudbuild.yaml  index.html
client/src/media/: media-handler.js
client/src/utils/: utils.js
client/styles/: mobile-style.css
cloud-functions/sheet-assistant/: main.py  requirements.txt
server/: .env  Dockerfile  requirements.txt  server.py
server/config/: config.py  system-instruction.txt
server/core/: gemini_client.py  session.py  tool_handler.py  websocket_handler.py
